@@ -1,7 +1,6 @@
-set PATH=%~dp0..\bin\jdk-18.0.2.1\bin\;%~dp0..\bin\javafx-sdk-11.0.2\bin\
-javac --module-path %~dp0..\lib --add-modules=javafx.media -d %~dp0..\pkg %~dp0..\src\*.java
-cd %~dp0..\pkg
-jar cmf MANIFEST.MF BALL_GAME.jar *.class ..\src\*.java ballgame
+set out_dir=%~dp0..\pkg
+%~dp0..\bin\jdk-20.0.1\bin\javac -d %out_dir% %~dp0..\src\*.java
+cd %out_dir%
+..\bin\jdk-20.0.1\bin\jar cmf ..\debug\MANIFEST.MF BALL_GAME.jar *.class
 del *.class
 cd %~dp0
-REM pause
